--- a/En/index.html
+++ b/En/index.html
@@ -56,7 +56,7 @@
   <header id="header" class="fixed-top d-flex align-items-center ">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <div><a href="https://www.conacyt.mx/" class="logo"><img src="../assets/img/conacyt-.png" alt="" class="img-fluid"></a>
+      <div>
         <a href="https://www.inaoep.mx/" class="logo"><img src="../assets/img/inaoe-.png" alt="" class="img-fluid"></a><a class="logo"><img src="../assets/img/slash.png" alt="" class="img-fluid"></a>
         <a class="logo"><img src="../assets/img/logo_ciberlab_bco.png" alt="" class="img-fluid"></a>
       </div>
