--- a/equipo.html
+++ b/equipo.html
@@ -40,11 +40,6 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center ">
     <div class="container d-flex align-items-center justify-content-between">
-<<<<<<< HEAD
-
-=======
- 
->>>>>>> 95ee3305544de835af4715ecb16152489412cd57
       <div>
       <a href="https://www.inaoep.mx/" class="logo"><img src="assets/img/inaoe-.png" alt="" class="img-fluid"></a><a class="logo"><img src="assets/img/slash.png" alt="" class="img-fluid"></a>
       <a class="logo"><img src="assets/img/logo_ciberlab_bco.png" alt="" class="img-fluid"></a>
@@ -131,6 +126,7 @@
                     <li>Autenticación de Imágenes</li>
                     <li>Perceptual Hashing</li>
                     <li>Ocultamiento de información</li>
+                    <li>Sistemas de Seguridad y detección de anomalías</li>
                     <li>Sistemas de Seguridad para Aplicación en la Industria Automotriz</li>
                     <li>IoT, IoMT</li>
                   </ul>
@@ -175,7 +171,6 @@
               <div class="member-info">
                 <h4>Dr.Ignacio Algredo Badillo</h4>
                 <span><strong>Investigador por México</strong></span>
-                <p><strong>Miembro del Sistema Nacional de Investigadores, Nivel 1</strong></p>
                 <p>Líneas de investigación:</p>
                 <ul>
                   <li>Cómputo reconfigurable</li>
@@ -268,7 +263,7 @@
               <div class="member-info">
                 <h4>Dr. René A. Cumplido Parra</h4>
                 <span><strong>Investigador Titular INAOE</strong></span>
-                <p><strong>Miembro del Sistema Nacional de Investigadores, Nivel 2</strong></p>
+                <p><strong>Miembro del Sistema Nacional de Investigadores, Nivel 3</strong></p>
                 <p>Líneas de investigación:</p>
                 <ul>
                   <li><strong>Diseño Digital:</strong></li>
@@ -302,15 +297,14 @@
                 <p><strong>Miembro del Sistema Nacional de Investigadores, Nivel 1</strong></p>
                 <p>Líneas de investigación:</p>
                 <ul>
-                  <li>Diseño y aceleración de algoritmos IA en arquitecturas HW-SW</li>
-                  <li>Seguridad en plataformas IoT</li>
-                  <li>Algoritmos de optimización</li>
+                  <li>Diseño e implementación de técnicas basadas en Inteligencia Artificial y Optimización en Internet de las cosas</li>
+                  <li>Diseño de sistemas inteligentes y nuevas aplicaciones para Internet de las cosas, IoMT</li>
+                  <li>Diseño de arquitecturas seguras en sistemas IoT</li>
                   <li>Seguridad en dispositivos móviles</li>
-                  <li>Diseño de sistemas en tiempo real HW-SW</li>
-                  <li>Sistemas inteligentes</li>
+                  <li>Diseño y seguridad de nuevas tecnologías, sistemas embebidos</li>
+                  <li>Ciberseguridad</li>
                   <li>Industria 4.0</li>
-                  <li>Inteligencia Artificial</li>
-                  <li>Seguridad In-Vehicle</li>
+                  <li>Diseño e implementación de protocolos de comunicación</li>
                 </ul>
                 
               </div>
@@ -326,11 +320,13 @@
                 <p><strong>Miembro del Sistema Nacional de Investigadores, Nivel 1</strong></p>
                 <p>Líneas de investigación:</p>
                 <ul>
-                  <li>Diseño de algoritmos de minería de datos</li>
+                  <li>Minería de datos</li>
                   <li>Diseño de arquitecturas de hardware reconfigurable</li>
                   <li>Ciberseguridad</li>
-                  <li>Aprendizaje automático</li>
+                  <li>Aprendizaje automatizado</li>
                   <li>Procesamiento del lenguaje natural</li>
+                  <li>Reconocimiento de patrones</li>
+                  <li>Ciberseguridad</li>
                 </ul>
                 
                   <br>
