--- a/equipo.html
+++ b/equipo.html
@@ -160,11 +160,12 @@
                   <li>Sistemas Complejos</li>
                   <li>Teoría del flujo de tráfico</li>
                 </ul>
-                
               </div>
             </div>
           </div>
-            
+          <br>
+          <br>
+          <br>  
           <div class="col-lg-6 mt-4">
             <div class="member d-flex align-items-start">
               <div class="pic"><img src="assets/img/team/Dr. Ignacio.jpg" width="150" height="150" class="img-fluid" alt=""></div>
@@ -188,7 +189,6 @@
               </div>
             </div>
           </div>
-
         <div class="col-lg-6">
             <div class="member d-flex align-items-start">
               <div class="pic"><img src="assets/img/team/Dr. Miguep.jpg" class="img-fluid" alt=""></div>
@@ -380,7 +380,7 @@
             <div class="member d-flex align-items-start">
               <div class="pic"><img src="assets/img/team/M.en.C.Alejandro.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Dr. Alejandro Peñuelas</h4>
+                <h4>Dr. Alejandro Peñuelas Angulo</h4>
                 <span><strong>Investigador en Criptografía</strong></span>
                 <p>Líneas de investigación:</p>
                 <ul>
