--- a/acerca-de-nosotros.html
+++ b/acerca-de-nosotros.html
@@ -49,7 +49,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto" href="index.html">Inicio</a></li>
-          <li><a class="nav-link scrollto active" href="acerca-de-nosotros.html">Acerca de nosotros</a></li>
+          <li><a class="nav-link scrollto" href="acerca-de-nosotros.html">Acerca de nosotros</a></li>
           <li><a class="nav-link scrollto" href="servicios.html">Servicios</a></li>
           <li><a class="nav-link scrollto" href="equipo.html">Equipo</a></li>
           <li class="dropdown"><a href="#"><span>Seminarios</span><i class= "bi bi-chevron-down"></i></a>
