--- a/contacto.html
+++ b/contacto.html
@@ -99,7 +99,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Correo:</h4>
-                <p>cferegrino@inaoep.mx</p>
+                <p>labciberseguridad@inaoep.mx</p>
               </div>
 
               <div class="phone">
