--- a/equipo.html
+++ b/equipo.html
@@ -144,16 +144,9 @@
                 <p>Líneas de investigación:</p>
                 <ul>
                   <li>Sistemas distribuidos</li>
-                  <li>Protocolos de ordenamiento causal y espacio temporal (fuzzy-causal)</li>
-                  <li>Protocolos bio-inspirados de comunicación</li>
-                  <li>Seguridad informática</li>
-                  <li>Comunicación segura en grupos</li>
-                  <li>Seguridad en protocolos de comunicación V2X</li>
-                  <li>Sistemas inteligentes de transporte</li>
-                  <li>Análisis y simulación del tránsito y de redes viales urbanas</li>
-                  <li>Redes de confianza cero</li>
                   <li>Sistemas Complejos</li>
-                  <li>Teoría del flujo de tráfico</li>
+                  <li>Teoría del flujo del tráfico</li>
+                  <li>Seguridad en redes</li>
                 </ul>
               </div>
             </div>
@@ -169,11 +162,12 @@
                   <li>Cómputo reconfigurable</li>
                   <li>Seguridad</li>
                   <li>Criptografía</li>
+                  <li>IA en FPGA</li>
                   <li>Radio software</li>
                   <li>Arquitecturas hardware de alto desempeño</li>
                   <li>Control y automatización</li>
-                  <li>Sistemas basados en uP/uC, PICs, FPGAs y PLCs</li>
-                  <li>Procesamiento digital de imágenes y procesamiento digital de señales</li>
+                  <li>Sistemas basados en uP/uC, PIC's, FPGA's y PLC's</li>
+                  <li>Procesamiento digital de imágenes y procesamiento digital de señales en software y FPGA's</li>
                   <li>Robótica y Procesamiento de Imágenes</li>
                   <li>Redes neuronales artificiales y Lógica difusa en HW</li>
                 </ul>
