Up(update): Se ha actualizado la vista html equipo y seminrarios 2023

--- a/equipo.html
+++ b/equipo.html
@@ -122,11 +122,11 @@
                   <ul>
                     <li>Procesamiento y autenticación de imágenes digitales</li>
                     <li>Forgery Detection</li>
-                    <li>Autenticación de Imágenes</li>
-                    <li>Perceptual Hashing</li>
+                    <li>Autenticación de imágenes</li>
+                    <li>Perceptual hashing</li>
                     <li>Ocultamiento de información</li>
-                    <li>Sistemas de Seguridad y detección de anomalías</li>
-                    <li>Sistemas de Seguridad para Aplicación en la Industria Automotriz</li>
+                    <li>Sistemas de seguridad y detección de anomalías</li>
+                    <li>Sistemas de seguridad para aplicación en la industria automotriz</li>
                     <li>IoT, IoMT</li>
                   </ul>
                 </p>
@@ -176,7 +176,7 @@
                   <li>Sistemas basados en uP/uC, PIC's, FPGA's y PLC's</li>
                   <li>Procesamiento digital de imágenes y procesamiento digital de señales en software y FPGA's</li>
                   <li>Robótica y Procesamiento de Imágenes</li>
-                  <li>Redes neuronales artificiales y Lógica difusa en HW</li>
+                  <li>Redes neuronales artificiales y lógica difusa en HW</li>
                 </ul>
               </div>
             </div>
@@ -340,7 +340,7 @@
                     <li>Diseño de arquitecturas hardware para IoT</li>
                     <li>Seguridad en IoT</li>
                 </ul>
-                    <li><strong>Seguridad para Smart Grids</strong></li>
+                    <li><strong>Seguridad para smart grids</strong></li>
                 </ul>
                 <br>
                 <br>
