--- a/seminarios2023.html
+++ b/seminarios2023.html
@@ -84,6 +84,84 @@
 
         <div class="row" data-aos="zoom-in">
           <div class="section-title">
+          <h2>Seminarios Primavera 2023 </h2>
+          </div>
+          <div class="row">
+            <table class="align-content" class="th">
+              <tr> 
+                <th scope="col">Fecha</th> 
+                <th scope="col">Ponente</th> 
+                <th scope="col">Ponencia</th>
+              </tr>
+              <tr> 
+                <td>09-Feb-2023</td> 
+                <td>M. en C. Iván Olivera Romero</td> 
+                <td>La propiedad itelectual en la Ciberseguridad</td>
+              </tr>
+              <tr> 
+                <td>16-Feb-2023</td> 
+                <td>Dr.Victor Manuel Morales Rocha</td> 
+                <td>Modelo tecnológico de interoperabilidad de sistemas de expediente clínico electrónico: consideraciones de seguridad</td>
+              </tr>
+              <tr> 
+                <td>23-feb-23</td> 
+                <td>Dr. Miguel Morales Sandoval/td> 
+                <td>Funciones hash y su relevancia en ciberseguridad</td>
+              </tr>
+              <tr> 
+                <td>02-Mzo-23</td> 
+                <td>Issac Rodríguez Ibarra/td> 
+                <td>Diseño, modelado y simulación de una memoria DRAM de 8 bits basado en tecnología CMOS de 180nm y su aplicación en seguridad</td>
+              </tr>
+              <tr> 
+                <td>9-Mzo-23</td> 
+                <td>Dr. Andrei Chernykh, M.C. Luis Bernardo Pulido</td> 
+                <td>Towars efficient privacy-preserving neural networks with homomorphic encryption</td>
+              </tr>
+              <tr> 
+                <td>16-Mzo-23</td>
+                <td>Dr. Carlos Andres Lara Niño</td> 
+                <td>Criptografia ligera, el nuevo estandard de NIST: ASCON</td>
+              </tr>
+              <tr> 
+                <td>23-Mzo-23</td> 
+                <td>Víctor Morales</td> 
+                <td>Rol de la nube pública en la digitalización en los países nórdicos</td>
+              </tr>
+              <tr> 
+                <td>13-Abr-23</td> 
+                <td>M. en C. Mireya Lucia Hernández Jaimes</td> 
+                <td>Evaluating ML methods for intrusion detection in the Internet of Medical Things (IoMT)</td>
+              </tr>
+              <tr> 
+                <td>20-Abr-23</td> 
+                <td>Jonathan Sebastián López Valdivieso</td> 
+                <td>Implementación hardware/software del esquema de firma digital postcuántica SPHINCS+ para IoT</td>
+              </tr>
+              <tr> 
+                <td>27-Abr-23</td> 
+                <td>José Juan Hernández Morales</td> 
+                <td>Diseño de arquitecturas de hardware para aceleración de aritmética modular en algoritmos de criptografía post-cuántica</td>
+              </tr>
+              <tr> 
+                <td>11-May-23</td> 
+                <td>Dra. Karina Pérez</td> 
+                <td>Marca de agua visible-imperceptible para la protección de imágenes con calidad HDR</td>
+              </tr>
+              <tr> 
+                <td>13-Jul-23</td> 
+                <td>Dr. Eleazar Aguirre Anaya</td>
+                <td>Los paradigmas de seguridad estáticos no son la respuesta frente a las amenazas del futuro cercano</td>
+              </tr>
+              </table>
+            </div>
+        <br>
+        <br>
+
+        </div>
+
+        <div class="row" data-aos="zoom-in">
+          <div class="section-title">
           <h2>Seminarios Otoño 2023 </h2>
           </div>
           <div class="row">
