--- a/seminarios2022.html
+++ b/seminarios2022.html
@@ -125,7 +125,7 @@
               </tr>
               <tr> 
                 <td>07-Abr-22</td> 
-                <td>M. en C. Freddy Chaurra/td> 
+                <td>M. en C. Freddy Chaurra</td> 
                 <td>Introducción a la Computación Cuántica</td>
               </tr>
               <tr> 
