--- a/seminarios2023.html
+++ b/seminarios2023.html
@@ -105,12 +105,12 @@
               </tr>
               <tr> 
                 <td>23-feb-23</td> 
-                <td>Dr. Miguel Morales Sandoval/td> 
+                <td>Dr. Miguel Morales Sandoval</td> 
                 <td>Funciones hash y su relevancia en ciberseguridad</td>
               </tr>
               <tr> 
                 <td>02-Mzo-23</td> 
-                <td>Issac Rodríguez Ibarra/td> 
+                <td>Issac Rodríguez Ibarra</td> 
                 <td>Diseño, modelado y simulación de una memoria DRAM de 8 bits basado en tecnología CMOS de 180nm y su aplicación en seguridad</td>
               </tr>
               <tr> 
